{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 45,
  "lineage": "d5cc74ab-b258-2efb-6b4d-23bb3c767ed6",
  "resources": [
    {
      "module": "module.dev_infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:203475185299:vpc/vpc-0c8115849249f10e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-06aceca8fcdbf404f",
            "default_route_table_id": "rtb-052b78a7d53f2df19",
            "default_security_group_id": "sg-087e024d3c3e78c76",
            "dhcp_options_id": "dopt-0bf23e7083ae555fd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0c8115849249f10e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052b78a7d53f2df19",
            "owner_id": "203475185299",
            "region": "ap-south-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev_infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:203475185299:instance/i-00190ed444995e902",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00190ed444995e902",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05f93432293621cf3"
              }
            ],
            "primary_network_interface_id": "eni-05f93432293621cf3",
            "private_dns": "ip-172-31-35-18.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.18",
            "public_dns": "ec2-13-127-255-208.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.255.208",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-011c8bdee0088c36d",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-terraform-automate-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f32319aac9ab39a6",
            "tags": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "dev",
              "Name": "dev-terraform-instance"
            },
            "tags_all": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "dev",
              "Name": "dev-terraform-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a730d78c171d630"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203475185299",
            "id": "i-00190ed444995e902",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev_infra.aws_default_vpc.default",
            "module.dev_infra.aws_key_pair.terraform",
            "module.dev_infra.aws_security_group.my-security-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:203475185299:instance/i-0ccd801a874d62cfc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ccd801a874d62cfc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07a9e778023e6051c"
              }
            ],
            "primary_network_interface_id": "eni-07a9e778023e6051c",
            "private_dns": "ip-172-31-46-178.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.46.178",
            "public_dns": "ec2-43-205-230-132.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.230.132",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0de4e03eb353a9910",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-terraform-automate-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f32319aac9ab39a6",
            "tags": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "dev",
              "Name": "dev-terraform-instance"
            },
            "tags_all": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "dev",
              "Name": "dev-terraform-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a730d78c171d630"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203475185299",
            "id": "i-0ccd801a874d62cfc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev_infra.aws_default_vpc.default",
            "module.dev_infra.aws_key_pair.terraform",
            "module.dev_infra.aws_security_group.my-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.dev_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:203475185299:security-group/sg-02a730d78c171d630",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a730d78c171d630",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-terraform-automate-sg",
            "name_prefix": "",
            "owner_id": "203475185299",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "Terraform Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Terraform Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8115849249f10e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203475185299",
            "id": "sg-02a730d78c171d630",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev_infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod_infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:203475185299:vpc/vpc-0c8115849249f10e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-06aceca8fcdbf404f",
            "default_route_table_id": "rtb-052b78a7d53f2df19",
            "default_security_group_id": "sg-087e024d3c3e78c76",
            "dhcp_options_id": "dopt-0bf23e7083ae555fd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0c8115849249f10e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052b78a7d53f2df19",
            "owner_id": "203475185299",
            "region": "ap-south-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prod_infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:203475185299:instance/i-04e29de2ca65fdee5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e29de2ca65fdee5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "prod-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07bc8764ce0a5acab"
              }
            ],
            "primary_network_interface_id": "eni-07bc8764ce0a5acab",
            "private_dns": "ip-172-31-45-10.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.45.10",
            "public_dns": "ec2-13-126-232-23.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.232.23",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-030a01c14cc2d8f3b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-terraform-automate-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f32319aac9ab39a6",
            "tags": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "prod",
              "Name": "prod-terraform-instance"
            },
            "tags_all": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "prod",
              "Name": "prod-terraform-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07c213559cda66476"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203475185299",
            "id": "i-04e29de2ca65fdee5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prod_infra.aws_default_vpc.default",
            "module.prod_infra.aws_key_pair.terraform",
            "module.prod_infra.aws_security_group.my-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.prod_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:203475185299:security-group/sg-07c213559cda66476",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c213559cda66476",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-terraform-automate-sg",
            "name_prefix": "",
            "owner_id": "203475185299",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "Terraform Security Group"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "Terraform Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8115849249f10e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203475185299",
            "id": "sg-07c213559cda66476",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prod_infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stage_infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:203475185299:vpc/vpc-0c8115849249f10e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-06aceca8fcdbf404f",
            "default_route_table_id": "rtb-052b78a7d53f2df19",
            "default_security_group_id": "sg-087e024d3c3e78c76",
            "dhcp_options_id": "dopt-0bf23e7083ae555fd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0c8115849249f10e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052b78a7d53f2df19",
            "owner_id": "203475185299",
            "region": "ap-south-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.stage_infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:203475185299:instance/i-08eae49ee2ca6e05f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08eae49ee2ca6e05f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stage-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-004736558a6bc4622"
              }
            ],
            "primary_network_interface_id": "eni-004736558a6bc4622",
            "private_dns": "ip-172-31-47-63.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.63",
            "public_dns": "ec2-65-1-133-196.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.133.196",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06b226b3dc44c86fb",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stage-terraform-automate-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f32319aac9ab39a6",
            "tags": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "stage",
              "Name": "stage-terraform-instance"
            },
            "tags_all": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "stage",
              "Name": "stage-terraform-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bd869b40fed39d9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203475185299",
            "id": "i-08eae49ee2ca6e05f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.stage_infra.aws_default_vpc.default",
            "module.stage_infra.aws_key_pair.terraform",
            "module.stage_infra.aws_security_group.my-security-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:203475185299:instance/i-0c97c83f0463461bf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c97c83f0463461bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stage-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0641e34961b310825"
              }
            ],
            "primary_network_interface_id": "eni-0641e34961b310825",
            "private_dns": "ip-172-31-47-2.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.2",
            "public_dns": "ec2-3-110-161-74.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.161.74",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0151ca415e3373d0e",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stage-terraform-automate-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f32319aac9ab39a6",
            "tags": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "stage",
              "Name": "stage-terraform-instance"
            },
            "tags_all": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "stage",
              "Name": "stage-terraform-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bd869b40fed39d9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203475185299",
            "id": "i-0c97c83f0463461bf",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.stage_infra.aws_default_vpc.default",
            "module.stage_infra.aws_key_pair.terraform",
            "module.stage_infra.aws_security_group.my-security-group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07a00cf47dbbc844c",
            "arn": "arn:aws:ec2:ap-south-1:203475185299:instance/i-042381ebc71d29f9a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042381ebc71d29f9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stage-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-093aedbba5c947e71"
              }
            ],
            "primary_network_interface_id": "eni-093aedbba5c947e71",
            "private_dns": "ip-172-31-32-80.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.80",
            "public_dns": "ec2-13-234-48-17.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.48.17",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8a83f00e0c302ba",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stage-terraform-automate-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f32319aac9ab39a6",
            "tags": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "stage",
              "Name": "stage-terraform-instance"
            },
            "tags_all": {
              "Description": "This is a Terraform-managed EC2 instance.",
              "Environment": "stage",
              "Name": "stage-terraform-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bd869b40fed39d9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203475185299",
            "id": "i-042381ebc71d29f9a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.stage_infra.aws_default_vpc.default",
            "module.stage_infra.aws_key_pair.terraform",
            "module.stage_infra.aws_security_group.my-security-group"
          ]
        }
      ]
    },
    {
      "module": "module.stage_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:203475185299:security-group/sg-08bd869b40fed39d9",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bd869b40fed39d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stage-terraform-automate-sg",
            "name_prefix": "",
            "owner_id": "203475185299",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stage",
              "Name": "Terraform Security Group"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "Terraform Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8115849249f10e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "203475185299",
            "id": "sg-08bd869b40fed39d9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.stage_infra.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}